<resources>
    <string name="app_name">TemplateAndServer</string>


    <string name="start_server">启动服务器</string>
    <string name="stop_server">停止服务器</string>
    <string name="start_browse">在浏览器中打开</string>
    <string name="service_manage">后台管理</string>
    <string name="service_test">接口测试</string>

    <string name="server_stop_succeed">服务器停止了</string>
    <string name="server_ip_error">没有获取到服务器IP地址</string>


    <string name="regex_phone_number">^((13[0-9])|(14[5,7])|(15[0-3,5-9])|(16[6])|(17[0,1,3,5-8])|(18[0-9])|(19[8,9]))\\d{8}$</string>
    <string name="regex_password">^(?:(?=.*[a-zA-Z])(?=.*[0-9])).{8,18}$</string>
    <string name="tip_password_error">密码必须是8~18位字母和数字的组合！</string>
    <string name="tip_phone_number_error">无效的手机号！</string>
    <string name="hint_login_password">请输入登录密码</string>
    <string name="label_password">密码</string>
    <string name="hint_login_name">请输入登录名</string>
    <string name="label_login_name">登录名</string>
    <string name="hint_name">请输入姓名</string>
    <string name="label_name">姓名</string>
    <string name="hint_age">请输入年龄</string>
    <string name="label_age">年龄</string>
    <string name="label_gender">性别</string>
    <string name="hint_phone_number">请输入手机号码</string>
    <string name="label_phone_number">手机号码</string>
    <string name="tip_age_error">年龄必须大于0小于150!</string>
    <string name="regexp_age">^(?:[1-9]\\d?|1[0-4]\\d|150)$</string>
    <string name="tip_options">选项</string>
    <string name="tip_warning">提醒</string>
    <string name="content_warning">请确认连接的服务器地址:</string>
    <string name="lab_cancel">取消</string>
    <string name="lab_continue">继续</string>
    <string name="hint_please_input_server_ip_address">请输入服务器的地址</string>
    <string name="tip_url_input_error">地址输入错误</string>
    <string name="select_file">选择文件</string>
    <string name="upload_file_path">上传文件路径:</string>
    <string name="server_save_path">服务器保存路径:</string>
    <string name="upload_file">上传文件</string>
</resources>
