<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2020 xuexiangjys(xuexiangjys@163.com)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="?attr/xui_config_content_spacing_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_start"
                style="@style/Button.Blue.wrap.Server"
                android:text="@string/start_server" />


            <LinearLayout
                android:id="@+id/ll_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <Button
                    android:id="@+id/btn_stop"
                    style="@style/Button.Blue.wrap.Server"
                    android:text="@string/stop_server" />

                <Button
                    android:id="@+id/btn_browse"
                    style="@style/Button.Blue.wrap.Server"
                    android:layout_marginTop="?attr/xui_config_content_spacing_horizontal"
                    android:text="@string/start_browse" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="?attr/xui_config_content_spacing_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_manage"
                        style="@style/Button.Blue.wrap.Server"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/service_manage" />

                    <Button
                        android:id="@+id/btn_test"
                        style="@style/Button.Blue.wrap.Server"
                        android:layout_width="0dp"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:text="@string/service_test" />

                </LinearLayout>

            </LinearLayout>


            <TextView
                android:id="@+id/tv_message"
                style="@style/TextStyle.Content"
                android:layout_marginTop="?attr/xui_config_content_spacing_horizontal"
                android:gravity="start"
                android:singleLine="false"
                android:text="@string/server_stop_succeed" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>