<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2020 xuexiangjys(xuexiangjys@163.com)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dimen_24dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bth_select"
                style="@style/Button.Blue.wrap"
                android:text="@string/select_file" />

            <Button
                android:id="@+id/bth_upload"
                style="@style/Button.Blue.wrap"
                android:layout_marginStart="@dimen/dimen_20dp"
                android:text="@string/upload_file" />

        </LinearLayout>


        <TextView
            style="@style/TextStyle.Content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:text="@string/upload_file_path" />

        <TextView
            android:id="@+id/tv_upload_path"
            style="@style/TextStyle.Explain"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:gravity="start"
            android:singleLine="false" />

        <TextView
            style="@style/TextStyle.Content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:text="@string/server_save_path" />

        <TextView
            android:id="@+id/tv_save_path"
            style="@style/TextStyle.Explain"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:gravity="start"
            android:singleLine="false" />

    </LinearLayout>

</LinearLayout>